--- a/01-arrays/index.html
+++ b/01-arrays/index.html
@@ -4,12 +4,31 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>JS Fundamentals</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
+  <title>Arrays 01</title>
 </head>
+
 <body>
 
-  <h1>JS Fundamentals</h1>
+  <header>
+    <div class="container">
+      <div class="row">
+        <div class="col text-center my-5">
+          <h1>Teachers List</h1>
+        </div>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <div class="container">
+      <div class="row row-cols-5 gy-4" id="teachers">
+        <!-- TEACHER IMAGES GO HERE -->
+      </div>
+    </div>
+  </main>
 
   <script src="script.js"></script>
 </body>
+
 </html>
